--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Flexbox: flex-direction</title>
 <style>
+    body {
+    background-color: orange;
+  }
   #container {
     display: flex;
     width: 400px;
@@ -20,9 +23,6 @@
     margin: 5px;
   }
 
-  h2{
-    background-color: orange;
-  }
 </style>
 </head>
 <body>
